优化：配置文件支持环境变量

--- a/asset/swagger/index.html
+++ b/asset/swagger/index.html
@@ -1,9 +1,8 @@
-<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ .Title }}</title>
+    <title>接口文档</title>
     <link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css" >
     <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-16x16.png" sizes="16x16" />
@@ -46,11 +45,11 @@
             ],
             layout: "StandaloneLayout",
             validatorUrl: null,
-            url: "{{ .SpecURL }}",
+            url: "/swagger/swagger.json",
         })
         // End Swagger UI call region
         window.ui = ui
     }
 </script>
 </body>
-</html>`
+</html>
