优化：生成文档

--- a/asset/swagger/index.html
+++ b/asset/swagger/index.html
@@ -37,6 +37,7 @@
             "dom_id": "#swagger-ui",
             deepLinking: true,
             defaultModelsExpandDepth: -1, // 不显示 Models / Schemas
+            defaultModelExpandDepth: 9, // 展示接口模型深度
             presets: [
                 SwaggerUIBundle.presets.apis,
                 SwaggerUIStandalonePreset
@@ -46,7 +47,7 @@
             ],
             layout: "StandaloneLayout",
             validatorUrl: null,
-            url: "/swagger/swagger.json",
+            url: "./swagger.json",
         })
         // End Swagger UI call region
         window.ui = ui
